hotel overview; fixed spacing issue

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -231,29 +231,88 @@
 
 .overview {
     display: flex;
-    &__heading {}
+    align-items: center;
+    border-bottom: 1px solid var(--color-grey-light-2);
+    
+    &__heading {
+        font-size: 2.75rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        padding: 1.5rem 3rem;
+    }
     &__stars {
         margin-right: auto;
+        display: flex;
     }
-
+    
     &__icon-star,
     &__icon-location {
-        
         width: 1.75rem;
         height: 1.75rem;
-        margin-right: 2rem;
+        margin-right: .5rem;
         fill: var(--color-primary);
         
-        @media only screen {
-            margin-right: 0;
-            margin-bottom: .7rem;
-            width: 1.5rem;
-            height: 1.5rem;
-        }
     }
     &__location {
+        font-size: 1.2rem;
+        display: flex;
+        align-items: center;
     }
-    &__rating {}
-    &__rating-average {}
-    &__rating-count {}
+    &__rating {
+        background-color: var(--color-primary);
+        color: #fff;
+        margin-left: 3rem;
+        padding: 0 2.25rem;
+        align-self: stretch;
+    }
+    &__rating-average {
+        font-size: 2.24rem;
+        font-weight: 300;
+        
+    }
+    &__rating-count {
+        font-size: .8rem;
+        text-transform: uppercase;
+        
+    }
+}
+
+/////////////////////////////////////
+// Button
+.btn-inline{
+    border: none;
+    color: var(--color-primary);
+    font-size: inherit;
+    border-bottom: 1px solid currentColor;
+    padding-bottom: 2px;
+    display: inline-block;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all .2s;
+
+    &:hover {
+        color: var(--color-grey-dark-1);
+    }
+
+    &:focus {
+        outline: none;
+        animation: pulsate .4s infinite;
+    }
+}
+
+@keyframes pulsate {
+    0% {
+        transform: scale(1);
+        box-shadow: none;
+    }
+    50% {
+        transform: scale(1.05);
+        box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+    }
+    100% {
+
+    }
+
+
 }
